set the max width to 100% to keep images from overflowing, also make sure the height is auto to preserve the aspect ratio.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@27451 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -761,6 +761,13 @@
 			}
 		}
 	}
+
+	[itemprop~="nti-data-resizeable"]{
+		img{
+			max-width: 100%;
+			height: auto !important;
+		}
+	}
 }
 
 div.section-problem .highlight-mouse-over .MathJax_Display { color: #076da7 }
